<resources>
    <string name="app_name">e-commence</string>
    <string name="cart">Cart</string>

    <string name="login">Log In</string>
    <string name="signin">Sign in</string>
    <string name="phone">Phone number</string>
    <string name="pass">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="don_t_have_account">Don\'t have an account?</string>

    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="conPass">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>

    <string name="somethingError">Something went wrong</string>
    <string name="fullname">Full name</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="setting">Settings</string>
    <string name="greetUser">Good morning, Patrick</string>
    <string name="search">Search</string>
    <string name="product">Product</string>
    <string name="category">Category</string>

    <string name="myCartList">My \nCart List</string>
    <string name="empty_cart">Add product to Cart \nto view Cart</string>
    <string name="empty_transaction">Make purchase to \nview history</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="logout">Logout</string>
    <string name="track">Track Orders</string>
    <string name="something_went_wrong">Hmm...\nsomething went \nwrong.</string>
    <string name="lost_connection">Looks like you lost your connection. Please check it and try again</string>
    <string name="try_again">Try again</string>
    <string name="trackMess">Hello, This is Patrick Adutwum, Testing Track orders with a button click that takes the user to a chat conversation on WhatsApp</string>

</resources>