<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ItemsHome"
    android:background="@color/white">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:id="@+id/topLy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/greetUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@string/greetUser"
                        />
                </RelativeLayout>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_below="@+id/topLy"
                    android:layout_marginTop="20dp"
                    android:elevation="8dp"
                    >

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        app:iconifiedByDefault="false"
                        app:queryHint="@string/search"
                        app:queryBackground="@android:color/transparent"
                        />
                </androidx.cardview.widget.CardView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/searchRcy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    android:visibility="visible"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    />

                <LinearLayout
                    android:id="@+id/homeLy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/categoryTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="30dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categoryRecy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="30dp"
                        android:orientation="horizontal"
                        android:scrollbars="none"
                        />
                    <TextView
                        android:id="@+id/product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="30dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/productRecy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginHorizontal="30dp"
                            android:orientation="vertical"
                            android:scrollbars="none"
                            android:nestedScrollingEnabled="false"
                            />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>